LICENSE_1_0.txt or copy at http://www.boost.org/LICENSE_1_0.txt)
-------------------------------------------------------------------------------

TODO (known issues):
- Fix expansion of macros, which replacement-list terminates in a partial 
  macro expansion.
- Fix the re2c lexer for iterators others then string::iterator (or more 
  generally for iterators, which aren't random access iterators)
- Enforce, that #if/#endif are balanced file wise
- Try to remove the second parameter from the pp_iterator<>::force_include
  function.
- Fix the trigraph backslash problem in the re2c (C/C++ and IDL) scanners, if 
  there is the end of the (internal) buffer just in between a '??/' and a '\n'.
  
- Do a sourceforge release.

-------------------------------------------------------------------------------

CHANGELOG

- Added ill_formed_character_literal and ill_formed_integer_literal errors.
- Improved error handling and diagnostics for overflow in #if/#elif
  expressions.
- Fixed a bug in the testwave application which prevented the correct 
  recognition of expected errors under certain circumstances.
  
Thu Apr  7 10:07:45 WEDT 2005
Version 1.1.16
- Fixed a bug in the white space eating component, which prevented a C++ 
  comment to be suppressed if it followed after another whitespace.
- Fixed the inconsistencies between the documentation and the behaviour wrt the 
  different include search paths. See the Wave driver docs for details of how
  the '-I', '-I-', and '-S' options work.
- Allowed to specify more than one config file ('@' syntax) on the command line
  of the wave driver executable.
- Changed copyrights in all files to reflect the acceptance of Wave into Boost.
- Unknown preprocessing directives were not recognised as such anymore.
- If comments shouldn't be preserved all C++ comments are replaced by newline
  tokens (instead of beeing igored completely).
- Fixed a bug in the white space eater component.